--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<div class="avatar">
+    <img src="/assets/samples/avatar.png">
+</div>
+
+<h1>Jake Bauer</h1>
+
+<div class="points">
+    You have
+    <div class="ptvalue">600</div>
+</div>
+
+<div class="buttons">
+    <button class="btn-std">Spend Some!</button>
+    <button class="btn-std">Earn More</button>
+</div>
