--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,6 +10,6 @@
 </div>
 
 <div class="buttons">
-    <button class="btn-std">Spend Some!</button>
+    <button class="btn-std" routerLink="spend">Spend Some!</button>
     <button class="btn-std">Earn More</button>
 </div>
