--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,7 @@
     height: 250px;
     overflow: hidden;
     filter: drop-shadow(2px 2px 4px rgb(0,0,0,.7));
+    z-index: 1;
 }
 
 .avatar img {
