--- a/src/app/pages/spend/spend.component.css
+++ b/src/app/pages/spend/spend.component.css
@@ -15,6 +15,7 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    overflow-y: auto;
 }
 
 .but-opt {
@@ -45,6 +46,6 @@ h1 {
     padding-bottom: 4rem;
     border-radius: 11px;
     filter: drop-shadow(2px 2px 4px rgb(0,0,0,.7));
-    
+    max-height: 70%;
 }
 
