--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,7 @@
     overflow: hidden;
     filter: drop-shadow(2px 2px 4px rgb(0,0,0,.7));
     z-index: 1;
+    flex-shrink: 0;
 }
 
 .avatar img {
