Started on timed activity

--- a/src/app/pages/spend/spend.component.html
+++ b/src/app/pages/spend/spend.component.html
@@ -5,7 +5,7 @@
 <div class="center-box">
     <h1>Spend Some!</h1>
     <div class="buttons">
-        <button class="but-opt" *ngFor="let opt of spendOptions"> 
+        <button class="but-opt" *ngFor="let opt of spendOptions" [routerLink]="opt.id">
             <b>{{opt.name}}</b> 
         </button>
     </div>
